fixed logo clickable area too small

--- a/cheeseduke-story/scss/style.scss
+++ b/cheeseduke-story/scss/style.scss
@@ -36,6 +36,7 @@ a:hover {
   float: left;
   margin: 0 0 0 30px;
   background: transparent url(../img/logo.png) scroll no-repeat 50% 50%;
+  position:relative;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
@@ -47,6 +48,9 @@ a:hover {
 
 .toolbar h1.logo a {
   display: inline-block;
+  position:relative;
+  width:100%;
+  height:100%;
 }
 .toolbar h1.logo span {
   opacity: 0;
